modules/components/src/Arranger/ArrangerHeader.css
@import '../../public/themeStyles/constants.css';

.arranger-header {
  display: flex;
  justify-content: space-between;
  padding: 4px 16px 4px 20px;
  background-color: white;
  border-top-left-radius: 6px;
  border-top-right-radius: 6px;
  min-height: 43px;
  letter-spacing: 0.2px;
}

.arranger-header__title {
  display: flex;
  align-items: center;
  font-size: 16px;
  font-weight: 500;
  color: var(--primary-color-1);
  margin: 0;
}
.arranger-header__title .anticon-question-circle {
  font-size: 11px;
  margin-left: 6px;
  color: var(--font-color-light);
}

